# noraa

./: .gitignore  NOTICE  README.md  TODO.md  pyproject.toml  recovered-chat-2026-02-09.md
.github/workflows/: cli-smoke.yml
src/noraa/: cli.py  messages.py  project.py  snapshot.py  ui.py  util.py  validate.py
src/noraa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/noraa/agent/: __init__.py  diagnose.py
src/noraa/agent/rules/: 00_a_stochastic_physics_missing.yml  00_fms_r4_missing.yml  mpi_esmf_mismatch.yml
src/noraa/bootstrap/: tasks.py
src/noraa/buildsystem/: cmake_fallback.py  configure.py  env.py  find_deps.py  paths.py
src/noraa/fallbacks/: __init__.py  fv3.py
src/noraa/workflow/: core_commands.py  guided_build.py  preflight.py  run_smoke.py  run_smoke_cli.py  run_smoke_rt_commands.py
tests/: test_bootstrap_tasks.py  test_build_mpas_guided.py  test_buildsystem_configure.py  test_buildsystem_paths.py  test_cli_help.py  test_diagnose_core.py  test_find_deps_render.py  test_fv3_fms_fallback.py  test_messages.py  test_package_metadata.py  test_project_config.py  test_run_smoke_execute.py  test_run_smoke_rt_commands.py  test_run_smoke_security.py  test_run_smoke_status.py  test_self_test.py  test_validate_core.py  test_verify_preflight.py
