[project]
name = "noraa"
version = "0.1.0"
description = "NORAA: local workflow helper for MPAS-in-UFS builds and smoke tests"
requires-python = ">=3.10"
dependencies = ["typer>=0.12.0", "rich>=13.0.0"]

[project.scripts]
noraa = "noraa.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
