[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noraa"
version = "0.1.0"
description = "Rule-based helper agent for building MPAS in a target ufsatm repo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.9.0",
  "pyyaml>=6.0",
]

[project.scripts]
noraa = "noraa.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"noraa.agent.rules" = ["*.yml", "*.yaml"]
